--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
     <color name="orange">#e96d00</color>
 
     <color name="red">#d10000</color>
+
+    <color name="grey">#EEEEEE</color>
 </resources>
