--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,5 @@
 
     <color name="red">#d10000</color>
 
-    <color name="grey">#EEEEEE</color>
+    <color name="grey">#585555</color>
 </resources>
