--- a/app/src/main/res/layout/item_container.xml
+++ b/app/src/main/res/layout/item_container.xml
@@ -10,7 +10,7 @@
     android:padding="5dp">
 
     <TextView
-        android:id="@+id/item_name"
+        android:id="@+id/edit_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -20,11 +20,11 @@
         android:text="Name"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/item_icon"
+        app:layout_constraintStart_toEndOf="@+id/edit_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/ignore1"
+        android:id="@+id/ignore4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -33,11 +33,11 @@
         android:text="@string/initial_price"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/item_icon"
-        app:layout_constraintTop_toBottomOf="@+id/item_name" />
+        app:layout_constraintStart_toEndOf="@+id/edit_icon"
+        app:layout_constraintTop_toBottomOf="@+id/edit_item_name" />
 
     <TextView
-        android:id="@+id/ignore2"
+        android:id="@+id/ignore5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -46,11 +46,11 @@
         android:text="@string/current_price"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/item_icon"
-        app:layout_constraintTop_toBottomOf="@+id/ignore1" />
+        app:layout_constraintStart_toEndOf="@+id/edit_icon"
+        app:layout_constraintTop_toBottomOf="@+id/ignore4" />
 
     <ImageView
-        android:id="@+id/item_icon"
+        android:id="@+id/edit_icon"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginLeft="32dp"
@@ -61,7 +61,7 @@
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/initial_price"
+        android:id="@+id/edit_initial_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -69,8 +69,8 @@
         android:padding="2dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/ignore1"
-        app:layout_constraintTop_toBottomOf="@+id/item_name" />
+        app:layout_constraintStart_toEndOf="@+id/ignore4"
+        app:layout_constraintTop_toBottomOf="@+id/edit_item_name" />
 
     <TextView
         android:id="@+id/current_price"
@@ -81,11 +81,11 @@
         android:padding="2dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/ignore2"
-        app:layout_constraintTop_toBottomOf="@+id/initial_price" />
+        app:layout_constraintStart_toEndOf="@+id/ignore5"
+        app:layout_constraintTop_toBottomOf="@+id/edit_initial_price" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/ignore6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -96,8 +96,8 @@
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/item_icon"
-        app:layout_constraintTop_toBottomOf="@+id/ignore2" />
+        app:layout_constraintStart_toEndOf="@+id/edit_icon"
+        app:layout_constraintTop_toBottomOf="@+id/ignore5" />
 
     <TextView
         android:id="@+id/difference"
@@ -110,7 +110,7 @@
         android:text="TextView"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/ignore6"
         app:layout_constraintTop_toBottomOf="@+id/current_price" />
 
 </android.support.constraint.ConstraintLayout>
