--- a/app/src/main/res/menu/manage_items.xml
+++ b/app/src/main/res/menu/manage_items.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="dxexwxexy.pricefinder.Activities.ItemsView">
     <item
-        android:id="@+id/exit"
-        android:title="Exit" />
+        android:id="@+id/edit"
+        android:icon="@drawable/ic_edit"
+        android:title="@string/edit"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/delete"
+        android:icon="@drawable/ic_delete"
+        android:title="@string/delete"
+        app:showAsAction="always" />
 </menu>
