--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#455a64</color>
+    <color name="colorPrimaryDark">#2d2d2d</color>
 
-    <color name="colorPrimary">#718792</color>
+    <color name="colorPrimary">#000000</color>
 
     <color name="secondaryColor">#1c313a</color>
 
