--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#2d2d2d</color>
+    <color name="colorPrimaryDark">#000000</color>
 
     <color name="colorPrimary">#000000</color>
 
     <color name="secondaryColor">#1c313a</color>
 
-    <color name="colorAccent">#b0bec5</color>
+    <color name="colorAccent">#424242</color>
 
     <color name="secondaryLightColor">#929dd1</color>
 
