Fixed Edit Dialog

--- a/app/src/main/res/layout/add_dialog.xml
+++ b/app/src/main/res/layout/add_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/edit_item_name"
+        android:id="@+id/add_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edit_price"
+        android:id="@+id/add_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -44,10 +44,10 @@
         android:textColor="@android:color/background_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_item_name" />
+        app:layout_constraintTop_toBottomOf="@+id/add_item_name" />
 
     <EditText
-        android:id="@+id/edit_url"
+        android:id="@+id/add_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -57,7 +57,7 @@
         android:textColor="@android:color/background_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_price" />
+        app:layout_constraintTop_toBottomOf="@+id/add_price" />
 
     <Button
         android:id="@+id/add_item"
@@ -69,5 +69,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_url" />
+        app:layout_constraintTop_toBottomOf="@+id/add_url" />
 </android.support.constraint.ConstraintLayout>
