--- a/app/src/main/res/layout/content_items_view.xml
+++ b/app/src/main/res/layout/content_items_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Activities.ItemsView"
+    tools:context=".Activities.ItemsMainActivity"
     tools:showIn="@layout/activity_items_view">
 
     <android.support.v4.widget.SwipeRefreshLayout
