Added Loading Animation

--- a/app/src/main/res/layout/content_items_view.xml
+++ b/app/src/main/res/layout/content_items_view.xml
@@ -9,6 +9,18 @@
     tools:context=".Activities.ItemsMainActivity"
     tools:showIn="@layout/activity_items_view">
 
+    <ProgressBar
+        android:id="@+id/loading_icon"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:progressDrawable="@drawable/loading_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
